--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Formulários</title>
 </head>
 <body>
+    <h1>Formulário &#9989;</h1>
     <form action="#" method="post">
         
         <fieldset class="grupo">
